add menu cards, private policy page, hero change, address change

--- a/styles/style.css
+++ b/styles/style.css
@@ -89,20 +89,21 @@ a:hover {
     margin-left: 0.5rem;
 }
 
-header .logo {
+.logo, .logo, header .logo {
     width: 400px;
     display: block;
     margin: 1rem auto;
+    text-align:center;
 }
 
 @media (min-width: 600px) {
-    header .logo {
+    .logo, header .logo {
         width: 500px;
     }
 }
 
 @media (min-width: 700px) {
-    header .logo {
+    .logo, header .logo {
         width: 600px;
         margin-top: 2rem;
         margin-bottom: 2rem;
@@ -110,7 +111,7 @@ header .logo {
 }
 
 /* @media (min-width: 900px) {
-    header .logo {
+    .logo, header .logo {
         width: 800px;
         margin-top: 2rem;
         margin-bottom: 2rem;
@@ -120,7 +121,7 @@ header .logo {
 
 /* Hero Banner */
 .hero-banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/hero.jpg");
+    background-image: url("../images/hero.jpg");
     height: 50%;
     background-position: center;
     background-repeat: no-repeat;
@@ -130,19 +131,19 @@ header .logo {
 
 @media (min-width: 600px) {
     .hero-banner {
-        height: 60%;
+        height: 65%;
     }
 }
 
 @media (min-width: 900px) {
     .hero-banner {
-        height: 70%;
+        height: 75%;
     }
 }
 
 @media (min-width: 1200px) {
     .hero-banner {
-        height: 75%;
+        height: 80%;
     }
 }
 
@@ -184,6 +185,22 @@ header .logo {
 }
 
 
+.main-heading{
+    text-align:center;
+    padding-top:2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+.main-logo{
+    display:flex;
+    padding-bottom:2rem;
+    justify-content: center;
+
+
+}
+
+
 
 /* Main */
 
@@ -198,7 +215,7 @@ main {
 }
 
 
-/* Cards */
+/* Store Cards */
 
 .heading {
     font-size: 1.5rem;
@@ -290,6 +307,120 @@ main {
     display: block;
     margin: 2rem auto 2rem;
 }
+
+
+
+/* Menu Cards */
+
+.checked{
+    color:orange;
+}
+
+
+.heading {
+    font-size: 1.5rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+@media (max-width: 1200px) {
+    .heading {
+        text-align:center;
+    }
+}
+
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.store-name {
+    color: #02B0AF;
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.menu-card {
+    transition: box-shadow 0.3s;
+    width: 100%;
+    padding-bottom: 2rem;
+    margin-bottom: 4rem;
+    border-radius:20px;
+    border: 1px solid #cccccc;
+    background: #fff;
+    box-shadow: 0 0 11px rgba(33,33,33,.18); 
+}
+
+@media (min-width: 750px) {
+    .menu {
+        max-width: none;
+        justify-content: space-between;
+    }
+
+    .store-name {
+        font-size: 1.6rem;
+    }
+
+    .menu-card {
+        width: 48%;
+        padding-bottom: 0.5rem;
+        margin-bottom: 2rem;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .store-name {
+        font-size: 1.3rem;
+    }
+    
+    .menu-card {
+        width: 22%;
+        padding-bottom: 0.5rem;
+        margin-bottom: 2rem;
+    }
+}
+
+
+
+@media (min-width: 1200px) {
+
+    .menu-card:nth-child(3) {
+        margin-bottom: 2rem;
+    }
+}
+
+
+.menu-card:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.3); 
+}
+
+.menu-card img {
+    border-radius: 20px;
+    width: 80%;
+    display: block;
+    margin: 2rem auto 2rem;
+}  
+
+.menu-card p {
+    font-weight: 500;
+    width: 80%;
+    display: block;
+    margin: 2rem auto 2rem;
+}
+
+
+.food-panda{
+    width:100px !important;
+    height:50px;
+    border-radius:0px !important;
+}
+
+
+/* Footer */
+
 
 footer {
     margin-top: 2rem;
